@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.20 (gritter) 9/29/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.22 (gritter) 9/29/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.20 (gritter) 9/29/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.22 (gritter) 9/29/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -38,10 +38,10 @@ troff.d/afm.h: * Sccsid @(#)afm.h	1.13 (gritter) 9/29/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.4 (gritter) 9/29/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.5 (gritter) 9/29/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.28 (gritter) 9/18/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.48 (gritter) 9/18/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.89 (gritter) 9/27/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.90 (gritter) 9/29/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.13 (gritter) 9/11/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.8 (gritter) 9/18/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
