@@ -1,6 +1,8 @@
 Release ...
 * troff/dpost: Preliminary support for CFF-based OpenType fonts has been
   added.
+* troff: Kerning is now applied to pairs of characters that originate from
+  the same font mounted at two different positions.
 * dpost: Can now access all characters in a large PostScript font, not only
   the first 255.
 * dpost: If the data in a PFB file to be included does not end with a
